--- a/WebTestApp/Views/Addresses/Index.cshtml
+++ b/WebTestApp/Views/Addresses/Index.cshtml
@@ -4,12 +4,32 @@
     ViewData["Title"] = "Index";
 }
 
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+
+<div class="row row-cols-1 row-cols-md-2">
+    @foreach (var item in ViewData["adresses"] as IList<Address>)
+    {
+        <div class="col mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <div>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </div>
+                    <h5 class="card-title">
+                        @Html.DisplayFor(modelItem => item.CustomerId)
+                        @Html.DisplayFor(modelItem => item.CountryId)
+                    </h5>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
+                </div>
+            </div>
         </div>
-    </div>
+    }
+</div>
