--- a/WebTestApp/Views/Customers/Details.cshtml
+++ b/WebTestApp/Views/Customers/Details.cshtml
@@ -40,3 +40,26 @@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+<div class="row row-cols-1 row-cols-md-2">
+    @foreach (var item in ViewData["adresses"] as IList<Address>)
+    {
+        <div class="col mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <div>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </div>
+                    <h5 class="card-title">
+                        @Html.DisplayFor(modelItem => item.CustomerId)
+                        @Html.DisplayFor(modelItem => item.CountryId)
+                    </h5>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
