--- a/WebTestApp/Views/Addresses/Index.cshtml
+++ b/WebTestApp/Views/Addresses/Index.cshtml
@@ -17,17 +17,17 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <h5 class="card-title">
+                            <p>CustomerID - @Html.DisplayFor(modelItem => item.CustomerId)</p>
+                            <p>CountryID - @Html.DisplayFor(modelItem => item.CountryId)</p>
+                        </h5>
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
+                        <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
                     </div>
-                    <h5 class="card-title">
-                        @Html.DisplayFor(modelItem => item.CustomerId)
-                        @Html.DisplayFor(modelItem => item.CountryId)
-                    </h5>
-                    <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
-                    <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
-                    <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </div>
             </div>
         </div>
