--- a/WebTestApp/Views/Customers/Edit.cshtml
+++ b/WebTestApp/Views/Customers/Edit.cshtml
@@ -30,7 +30,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="CustomerGender" class="control-label"></label>
-                <select asp-for="CustomerGender" class="form-control"></select>
+                <select asp-for="CustomerGender" asp-items="Html.GetEnumSelectList<Gender>()">
+                    <option selected="selected" value="">Please select</option>
+                </select>
                 <span asp-validation-for="CustomerGender" class="text-danger"></span>
             </div>
             <div class="form-group">
