--- a/WebTestApp/Views/Customers/Details.cshtml
+++ b/WebTestApp/Views/Customers/Details.cshtml
@@ -48,8 +48,8 @@
                 <div class="card-body">
                     <div>
                         <h5 class="card-title">
-                            <p>CustomerID - @Html.DisplayFor(modelItem => item.CustomerId)</p>
-                            <p>CountryID - @Html.DisplayFor(modelItem => item.CountryId)</p>
+                            <p>Customer - @Html.DisplayFor(modelItem => item.CustomerId)</p>
+                            <p>Country - @Html.DisplayFor(modelItem => item.CountryId)</p>
                         </h5>
                         <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
                         <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
