--- a/WebTestApp/Views/Addresses/Create.cshtml
+++ b/WebTestApp/Views/Addresses/Create.cshtml
@@ -12,9 +12,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId">
+                <select asp-for="CustomerId" class="form-control">
                     @foreach (var item in ViewData["customers"] as IList<Customer>)
                     {
                         <option value="@item.Id">@item.Name</option>
@@ -37,9 +37,9 @@
                 <input asp-for="Zip" class="form-control" />
                 <span asp-validation-for="Zip" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId">
+                <select asp-for="CountryId" class="form-control">
                     @foreach (var item in ViewData["countries"] as IList<Country>)
                     {
                         <option value="@item.Id">@item.Name</option>
