--- a/WebTestApp/Views/Addresses/Index.cshtml
+++ b/WebTestApp/Views/Addresses/Index.cshtml
@@ -11,25 +11,25 @@
 </p>
 
 <div class="row row-cols-1 row-cols-md-2">
-    @foreach (var item in ViewData["adresses"] as IList<Address>)
+    @foreach (var item in Model)
     {
-        <div class="col mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div>
-                        <h5 class="card-title">
-                            <p>CustomerID - @Html.DisplayFor(modelItem => item.CustomerId)</p>
-                            <p>CountryID - @Html.DisplayFor(modelItem => item.CountryId)</p>
-                        </h5>
-                        <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
-                        <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
-                        <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
-                    </div>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+    <div class="col mb-4">
+        <div class="card">
+            <div class="card-body">
+                <div>
+                    <h5 class="card-title">
+                        <p>Customer - @Html.DisplayFor(modelItem => item.Customer.Name)</p>
+                        <p>Country - @Html.DisplayFor(modelItem => item.Country.Name)</p>
+                    </h5>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.StreetAddress)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.City)</p>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.Zip)</p>
                 </div>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </div>
         </div>
+    </div>
     }
 </div>
